Testing to see if removing content-wrap in the gallery fixes the issue of whitespace in the Gallery for iOS.

--- a/styles/main.css
+++ b/styles/main.css
@@ -102,9 +102,9 @@ body {
     position: relative;
 }
 
-/* main {
+main {
     min-height: 100vh;
-} */
+}
 
 /* ======================================================================
  * NAVIGATION BAR
@@ -376,12 +376,11 @@ nav {
  * ====================================================================== */
 
 footer {
-    /* position: absolute; */
     z-index: 3;
     width: 100%;
     background: black;
     box-shadow: 0px -2px 4px #00000075;
-    bottom: 0;
+    /* bottom: 0; */
 }
 
 .footer-text {
